<resources>
    <string name="app_name">RoomBookingApplication</string>
    <string name="register">Register</string>
    <string name="reset_details">Reset Details</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_with_us">Don\'t have an account with us?</string>
    <string name="or">Or</string>
    <string name="todo">TODO</string>
    <string name="forgot_your_details">Forgot your details?</string>
    <string name="enter_desired_username">Enter Desired UserName</string>
    <string name="enter_password">EnterPassword</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="submit">Submit</string>
    <string name="fullname">FullName</string>
    <string name="email">Email</string>
    <string name="enter_valid_email_adddress">Enter Valid Email Adddress</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="select_dates">Select Dates</string>

    <string-array name="times_List">
        <item>"00:00:00"</item>
        <item>"01:00:00"</item>
        <item>"02:00:00"</item>
        <item>"03:00:00"</item>
        <item>"04:00:00"</item>
        <item>"05:00:00"</item>
        <item>"06:00:00"</item>
        <item>"07:00:00"</item>
        <item>"08:00:00"</item>
        <item>"09:00:00"</item>
        <item>"10:00:00"</item>
        <item>"11:00:00"</item>
        <item>"12:00:00"</item>
        <item>"13:00:00"</item>
        <item>"14:00:00"</item>
        <item>"15:00:00"</item>
        <item>"16:00:00"</item>
        <item>"17:00:00"</item>
        <item>"18:00:00"</item>
        <item>"19:00:00"</item>
        <item>"20:00:00"</item>
        <item>"21:00:00"</item>
        <item>"22:00:00"</item>
        <item>"23:00:00"</item>
    </string-array>
    <string-array name="sectionChoice">
        <item>"Room"</item>
        <item>"Section"</item>
    </string-array>
</resources>